# Multi-Agent-Research-Assistant-CrewAI

./: README.md
.github/workflows/: tests.yml
examples-crewai/research_agent/: pyproject.toml
examples-crewai/research_agent/src/researchagent/: crew.py  main.py
